[package]
name = "blueski_mastodon_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
chrono = "0.4.24"
serde = {version = "1.0.188", features = ["derive"]}
megalodon = "0.11.3"
regex = "1.9.6"
html-entities = "0.1.0"
anyerror = "0.1.9"
